# dasom-jeongeum

./: .gitignore  .travis.yml  Makefile.am  NEWS  README  configure.ac
debian/: changelog  control  copyright  dasom-jeongeum.lintian-overrides  rules
src/: Makefile.am  dasom-jeongeum.c  dasom-jeongeum.h  org.freedesktop.Dasom.engines.jeongeum.gschema.xml
